--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "nodemon --require ts-node/register src/app.ts",
     "build": "prisma generate && tsc",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "ts-node ./src/app.js"
+    "start": "ts-node ./dist/app.js"
   },
   "dependencies": {
     "@mdi/font": "^7.4.47",
